--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.23.0",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
     "moment": "^2.27.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
