--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "moment": "^2.27.0",
-    "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.48.0"
   }
 }
